--- a/Big_School/Big_School.csproj
+++ b/Big_School/Big_School.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Migrations\202303100320189_PopulateCategoryTable.designer.cs">
       <DependentUpon>202303100320189_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202303181710500_AddNameColumToApplicationUser.cs" />
+    <Compile Include="Migrations\202303181710500_AddNameColumToApplicationUser.designer.cs">
+      <DependentUpon>202303181710500_AddNameColumToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -197,6 +201,8 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\FutureDate.cs" />
+    <Compile Include="ViewModels\ValidTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -281,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202303100320189_PopulateCategoryTable.resx">
       <DependentUpon>202303100320189_PopulateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202303181710500_AddNameColumToApplicationUser.resx">
+      <DependentUpon>202303181710500_AddNameColumToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
